--- a/src/components/tictactoe/tictactoe.css
+++ b/src/components/tictactoe/tictactoe.css
@@ -35,6 +35,7 @@ body {
   border: 2px solid #444;
   font-size: 24px;
   font-weight: bold;
+  color: #444; /* Add this line to change the color of the X and O symbols */
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -42,6 +43,7 @@ body {
   box-sizing: border-box;
   transition: background 0.3s;
 }
+
 
 .square:focus {
   outline: none;
