--- a/src/components/TreeVisualizer/style.css
+++ b/src/components/TreeVisualizer/style.css
@@ -9,7 +9,7 @@ body {
   }
   
   header {
-    background-color: #4c4eaf;
+    background-color: #21237c;
     color: white;
     padding: 10px;
     text-align: center;
